[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Enemy/mushroom.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/rsc/mushroom.gd" type="Script" id=2]
[ext_resource path="res://src/UserInterface/HealthBar.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 36, 41.5 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 40.0
height = 0.0

[node name="mushroom" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -3, -7 )
frames = SubResource( 6 )
frame = 4
playing = true

[node name="Area2D" type="Area2D" parent="AnimatedSprite"]
position = Vector2( 3, 7 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Area2D"]
position = Vector2( -2, 0.5 )
shape = SubResource( 7 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -28, 28 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, -1 )
shape = SubResource( 8 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -2, 1 )
scale = Vector2( 3.5, 4.1 )
process_parent = true
physics_process_parent = true

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
margin_left = -63.0
margin_top = -81.0
margin_right = -63.0
margin_bottom = -81.0

[connection signal="area_entered" from="AnimatedSprite/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
